# rofi-bw

./: Cargo.toml  README.md  install.sh
.cargo/: config.toml
.github/workflows/: release.yml
common/: Cargo.toml
common/src/: fs.rs  ipc.rs  lib.rs  stream.rs
dev/: Cargo.toml
dev/src/: main.rs
plugin/: Cargo.toml
plugin/src/: base64_decode_array.rs  bw_icons.rs  cairo_image_data.rs  data.rs  disk_cache.rs  errored.rs  initialized.rs  lib.rs  parallel_try_fill.rs  poll_future_once.rs  resource_dirs.rs  symmetric_key.rs  sync_wrapper.rs
plugin/src/cipher_string/: mod.rs  untyped.rs
plugin/src/icons/: bitwarden.rs  cards.rs  font.rs  mod.rs  resources.rs
resources/: README.md
src/: account.rs  auth.rs  bitwarden_api.rs  cache.rs  client.rs  config.rs  daemon.rs  data.rs  error_reporting.rs  fs_overwrite.rs  main.rs  menu.rs  prompt.rs  session.rs
util/: Cargo.toml
util/src/: fs.rs  lib.rs
