[workspace]
members = ["dev", "plugin", "common"]

[package]
name = "rofi-bw"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"

[dependencies]
rofi-bw-common = { path = "common" }

# RustCrypto
aes = "0.8.1"
aead = { version = "0.4.3", features = ["std"] }
argon2 = { version = "0.4.1", features = ["std"] }
block-padding = { version = "0.3.2", features = ["std"] }
cbc = "0.1.2"
chacha20poly1305 = "0.9.1"
cipher = { version = "0.4.3", features = ["block-padding", "alloc"] }
crypto-common = "0.1.3"
digest = "0.10.3"
hkdf = "0.12.3"
hmac = "0.12.1"
pbkdf2 = "0.11.0"
sha2 = "0.10.2"

anyhow = "1.0.58"
arboard = { version = "2.1.1", default-features = false }
base64 = "0.13.0"
bitflags = "1.3.2"
directories = "4.0.1"
itoa = "1.0.2"
libc = "0.2.126"
rand = "0.8.5"
serde = { version = "1.0.137", features = ["derive"] }
toml = "0.5.9"
ureq = { version = "2.4.0", features = ["tls", "json"] }
zeroize = "1.5.6"
