[workspace]
members = ["util", "dev", "plugin", "common"]

[package]
name = "rofi-bw"
version = "1.1.2"
edition = "2021"
publish = false
license = "MIT"

[dependencies]
rofi-bw-common = { path = "common" }
rofi-bw-util = { path = "util" }

# RustCrypto
aead = { version = "0.4.3", features = ["std"] }
argon2 = { version = "0.4.1", features = ["std"] }
chacha20poly1305 = "0.9.1"
hmac = "0.12.1"
pbkdf2 = "0.11.0"
sha2 = "0.10.2"

anyhow = "1.0.58"
arboard = { version = "2.1.1", default-features = false }
base64 = "0.13.0"
bincode = "2.0.0-rc.2"
bitflags = "1.3.2"
clap = { version = "3.2.14", features = ["derive"] }
directories = "4.0.1"
itoa = "1.0.2"
libc = "0.2.126"
notify-rust = { version = "4.5.8", default-features = false, features = ["d"] }
rand = "0.8.5"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.82"
toml = "0.5.9"
ureq = { version = "2.4.0", features = ["tls", "json"] }
uuid = { version = "1.1.2", features = ["v4", "serde"] }
zeroize = "1.5.6"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
