[package]
name = "rofi-bw-plugin"
version = "0.0.0"
edition = "2021"
publish = false
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
rofi-bw-common = { path = "../common" }

# RustCrypto
aes = { version = "0.8.1", features = ["zeroize"] }
block-padding = { version = "0.3.2", features = ["std"] }
cbc = { version = "0.1.2", features = ["std", "zeroize"] }
cipher = { version = "0.4.3", features = ["std", "block-padding", "zeroize"] }
crypto-common = { version = "0.1.5", features = ["std"] }
digest = { version = "0.10.3", features = ["std"] }
hkdf = { version = "0.12.3", features = ["std"] }
hmac = { version = "0.12.1", features = ["std"] }
sha2 = { version = "0.10.2", features = ["std"] }

anyhow = { version = "1.0.58", features = ["std"] }
base64 = { version = "0.13.0", features = ["std"] }
bytes = "1.2.0"
cairo-sys-rs = { version = "0.15.1", features = ["freetype"] }
directories = "4.0.1"
freetype-rs = "0.30.1"
image = { version = "0.24.3", default-features = false, features = ["ico", "jpeg_rayon", "png", "tiff", "webp", "jpeg"] }
memchr = "2.5.0"
rand = { version = "0.8.5", features = ["std"] }
rayon = "1.5.3"
reqwest = { version = "0.11.11", default-features = false, features = ["rustls-tls-webpki-roots", "gzip"] }
rofi-mode = "0.2.4"
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
time = { version = "0.3.11", features = ["serde", "parsing", "serde-well-known"] }
tokio = { version = "1.20.0", features = ["rt-multi-thread"] }
url = "2.2.2"
uuid = { version = "1.1.2", features = ["std", "serde"] }
zeroize = { version = "1.5.6", features = ["std"] }
